Update for web-components listing

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,8 @@
 <script>
-  window.modulesAssetPath = module => `/node_modules/${module}`;
+  window.modulesAssetPath = module => `/${module}`;
 </script>
 
-<script type="module" src="/button.js"></script>
+<script type="module" src="../button.js"></script>
 
 <apex-button><span>nested</span></apex-button>
 <apex-button topbar cta>focus</apex-button>
